Update guest distro from Ubuntu 20.04 to 22.04 (continue)
Signed-off-by: Peter Morjan <pmorjan@gmail.com>

--- a/qemu/s390x/Dockerfile
+++ b/qemu/s390x/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:20.04
+FROM ubuntu:22.04
 
 ENV RUNC_ROOT /runq/runc
 ENV RUNQ_ROOT /var/lib/runq
@@ -35,13 +35,16 @@ RUN set -eu; \
     rm -f go.tar.gz
 
 RUN mkdir -p \
+    $QEMU_ROOT/etc \
     $QEMU_ROOT/dev \
     $QEMU_ROOT/proc \
     $QEMU_ROOT/rootfs \
     $QEMU_ROOT/share \
     $QEMU_ROOT/sys
 
-RUN    echo base   /lib/modules/*/kernel/fs/fscache/fscache.ko                               >  $QEMU_ROOT/kernel.conf \
+
+RUN    echo base   /lib/modules/*/kernel/fs/netfs/netfs.ko                                   >  $QEMU_ROOT/kernel.conf \
+    && echo base   /lib/modules/*/kernel/fs/fscache/fscache.ko                               >> $QEMU_ROOT/kernel.conf \
     && echo base   /lib/modules/*/kernel/net/9p/9pnet.ko                                     >> $QEMU_ROOT/kernel.conf \
     && echo base   /lib/modules/*/kernel/fs/9p/9p.ko                                         >> $QEMU_ROOT/kernel.conf \
     && echo base   /lib/modules/*/kernel/net/9p/9pnet_virtio.ko                              >> $QEMU_ROOT/kernel.conf \
@@ -55,7 +58,6 @@ RUN    echo base   /lib/modules/*/kernel/fs/fscache/fscache.ko                  
     && echo btrfs  /lib/modules/*/kernel/arch/s390/crypto/crc32-vx_s390.ko                   >> $QEMU_ROOT/kernel.conf \
     && echo btrfs  /lib/modules/*/kernel/lib/libcrc32c.ko                                    >> $QEMU_ROOT/kernel.conf \
     && echo btrfs  /lib/modules/*/kernel/lib/raid6/raid6_pq.ko                               >> $QEMU_ROOT/kernel.conf \
-    && echo btrfs  /lib/modules/*/kernel/lib/zlib_deflate/zlib_deflate.ko                    >> $QEMU_ROOT/kernel.conf \
     && echo btrfs  /lib/modules/*/kernel/lib/zstd/zstd_compress.ko                           >> $QEMU_ROOT/kernel.conf \
     && echo btrfs  /lib/modules/*/kernel/crypto/xor.ko                                       >> $QEMU_ROOT/kernel.conf \
     && echo btrfs  /lib/modules/*/kernel/fs/btrfs/btrfs.ko                                   >> $QEMU_ROOT/kernel.conf \
@@ -75,12 +77,10 @@ RUN cp -d --preserve=all --parents \
     $QEMU_ROOT/ 2>&1 | grep -v 'omitting directory';:
 
  RUN cp -a --parents \
-     /etc/mtab \
      /usr/bin/qemu-system-s390x \
      /usr/bin/rsync \
      /usr/lib/ld64.so.1 \
      /usr/lib/modules \
-     /usr/lib/s390x-linux-gnu/ceph \
      /usr/lib/s390x-linux-gnu/qemu \
      /usr/sbin/e2fsck \
      /usr/sbin/fsck.ext2 \
@@ -92,6 +92,7 @@ RUN cp -d --preserve=all --parents \
      $QEMU_ROOT/
 
 RUN cd $QEMU_ROOT \
+    && ln -s ../proc/self/mounts etc/mtab \
     && ln -s usr/bin bin \
     && ln -s usr/lib64 lib64 \
     && ln -s usr/lib lib \
