--- a/qemu/x86_64/Dockerfile
+++ b/qemu/x86_64/Dockerfile
@@ -34,14 +34,14 @@ RUN set -eu; \
     rm -f go.tar.gz
 
 RUN mkdir -p \
+    $QEMU_ROOT/etc \
     $QEMU_ROOT/dev \
     $QEMU_ROOT/proc \
     $QEMU_ROOT/rootfs \
     $QEMU_ROOT/share \
     $QEMU_ROOT/sys
 
-# netfs/netfs.ko
-RUN    echo base  /lib/modules/*/kernel/fs/netfs/netfs.ko                                    > $QEMU_ROOT/kernel.conf \
+RUN    echo base  /lib/modules/*/kernel/fs/netfs/netfs.ko                                   >  $QEMU_ROOT/kernel.conf \
     && echo base  /lib/modules/*/kernel/fs/fscache/fscache.ko                               >> $QEMU_ROOT/kernel.conf \
     && echo base  /lib/modules/*/kernel/net/9p/9pnet.ko                                     >> $QEMU_ROOT/kernel.conf \
     && echo base  /lib/modules/*/kernel/fs/9p/9p.ko                                         >> $QEMU_ROOT/kernel.conf \
@@ -70,7 +70,6 @@ RUN cp -d --preserve=all --parents \
   $QEMU_ROOT/ 2>&1 | grep -v 'omitting directory';:
 
  RUN cp -a --parents \
-     /etc/mtab \
      /usr/bin/qemu-system-x86_64 \
      /usr/bin/rsync \
      /usr/lib64/ld-linux-x86-64.so.2 \
@@ -88,6 +87,7 @@ RUN cp -d --preserve=all --parents \
      $QEMU_ROOT/
 
 RUN cd $QEMU_ROOT \
+    && ln -s ../proc/self/mounts etc/mtab \
     && ln -s usr/bin bin \
     && ln -s usr/lib64 lib64 \
     && ln -s usr/lib lib \
